@@ -1,0 +1,6 @@
+#!/bin/bash
+
+DEPLOYMENT=$1
+DATAFILE=$2
+
+${CUTS_ROOT}/bin/cutstest --config=/proj/AntiSPAM/config/cutstest.birthtest.config -DDEPLOYMENT_PLAN=${DEPLOYMENT} --time=120 -f ${DATAFILE} --ignore-errors --debug --verbose --shutdown-timeout=5
